fix: fixed the problem with the layout breaking when the error message appears.
When an error message appeared on the screen, it pushed the entire layout down.

To fix this, I added a div with the same size as the text on the screen.

--- a/src/components/DisplayInformations/styles.css
+++ b/src/components/DisplayInformations/styles.css
@@ -9,3 +9,9 @@
 
   box-shadow: 10px 10px rgba(0, 0, 0, 0.3);
 }
+
+@media (max-width: 768px) {
+  .display-informations__container {
+    box-shadow: none;
+  }
+}
